fixed capped flag calc